■暫定的に、modeの値でAIを変えていた処理を「持っているアイテム」で判定するように。
・EntityLivingUtility」
→setAITask、interact

・「EntityLivingChest」
→setAITask、interact

また、「持っているアイテム」で判定するので、これまでのアイテム回収の方式を変更。

■「EntityLivingChest」
→onLivingUpdate

・「EntityLivingUtilityAICollectItem」
→shouldExecute